update family-font, mt home

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,9 @@
     />
     <title></title>
   </head>
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300&display=swap');
+  </style>
   <body>
     <!-- import jquery from bootstrap -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
