--- a/public/index.html
+++ b/public/index.html
@@ -7,11 +7,11 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <title></title>
+    <title>Islam Omar Elsweify - Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300&display=swap" rel="stylesheet">
   </head>
-  <style>
-    @import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300&display=swap');
-  </style>
   <body>
     <!-- import jquery from bootstrap -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
