--- a/public/index.html
+++ b/public/index.html
@@ -7,10 +7,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <title>Islam Omar Elsweify - Portfolio</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300&display=swap" rel="stylesheet">
+    <title>Islam-Portfolio</title>
   </head>
   <body>
     <!-- import jquery from bootstrap -->
